plugins {
	id 'fabric-loom' version '1.5-SNAPSHOT'
	id 'maven-publish'
}

group = "com.licht_meilleur"
version = "1.0.0"
archivesBaseName = "resurrection_ark"

repositories {
	// Fabric API
	maven { url "https://maven.fabricmc.net/" }
	mavenCentral()
}

dependencies {
	// Minecraft & Yarn
	minecraft "com.mojang:minecraft:1.20.1"
	mappings "net.fabricmc:yarn:1.20.1+build.10:v2"

	// Fabric loader & API
	modImplementation "net.fabricmc:fabric-loader:0.14.21"
	modImplementation "net.fabricmc.fabric-api:fabric-api:0.92.0+1.20.1"
}

loom {
	splitEnvironmentSourceSets()
}

java {
	toolchain.languageVersion = JavaLanguageVersion.of(17)
}

tasks.withType(JavaCompile).configureEach {
	it.options.encoding = "UTF-8"
}